objects/EEDL_Verification_Summary__c/EEDL_Verification_Summary__c.object-meta.xml
<CustomObject>
    <label>EEDL Verification Summary</label>
    <pluralLabel>EEDL Verification Summaries</pluralLabel>
    <nameField>
        <label>Summary Name</label>
        <type>AutoNumber</type>
        <displayFormat>EEDL-VS-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>