objects/EEDL_Verification_Summary__c/fields/Doc_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Doc_Last_Modified__c</fullName>
    <label>Doc Last Modified</label>
    <type>DateTime</type>
</CustomField>