objects/EEDL_Verification_Summary__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education</label>
    <referenceTo>Education__c</referenceTo>
    <relationshipLabel>EEDL Verification Summaries</relationshipLabel>
    <relationshipName>EEDL_Verification_Summaries_Edu</relationshipName>
    <type>Lookup</type>
</CustomField>