objects/EEDL_Verification_Summary__c/fields/Education_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Education_Record_Id__c</fullName>
    <label>Education Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>