objects/EEDL_Verification_Summary__c/fields/Last_Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_At__c</fullName>
    <label>Last Processed At</label>
    <type>DateTime</type>
</CustomField>