objects/EEDL_Verification_Summary__c/fields/Mismatched_Field_List__c.field-meta.xml
<CustomField>
    <fullName>Mismatched_Field_List__c</fullName>
    <label>Mismatched Field List</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>