objects/EEDL_Verification_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>EEDL Verification Summaries</relationshipLabel>
    <relationshipName>EEDL_Verification_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>