objects/EEDL_Verification_Summary__c/fields/Overall_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Overall_Feedback__c</fullName>
    <label>Overall Feedback</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>