objects/EEDL_Verification_Summary__c/fields/Record_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Record_Last_Modified__c</fullName>
    <label>Record Last Modified</label>
    <type>DateTime</type>
</CustomField>