objects/EEDL_Verification_Summary__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>