objects/EEDL_Verification_Summary__c/fields/Summary_HTML__c.field-meta.xml
<CustomField>
    <fullName>Summary_HTML__c</fullName>
    <label>Summary HTML</label>
    <type>Html</type>
    <length>131072</length>
</CustomField>